--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Job worker for sending message to ChatWork using Redis as queue.",
   "main": "src/worker.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,10 @@
   "dependencies": {
     "bull": "^2.0.0",
     "request": "^2.79.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.2.0",
+    "nock": "^9.0.2",
+    "sinon": "^1.17.6"
   }
 }
